--- a/Wallet.API/appsettings.json
+++ b/Wallet.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=WalletDB;User Id=postgres;Password=sa123456;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
