Gateway added. Implement Mediator, AutoMapper, and Unit of Work.

--- a/Wallet.Application/Wallet.Application.csproj
+++ b/Wallet.Application/Wallet.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\Wallet.Infrastructure\Wallet.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
+  </ItemGroup>
+
 </Project>
