Logging and elastic search implementation

--- a/Wallet.API/appsettings.json
+++ b/Wallet.API/appsettings.json
@@ -8,5 +8,44 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=WalletDB;User Id=postgres;Password=sa123456;TrustServerCertificate=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Elasticsearch" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Microsoft.AspNetCore.Dignostics.ExceptionHandlerMiddleware": "Fatal",
+        "LuckyPennySoftware.MediatR.License": "Fatal",
+        "LuckyPennySoftware.AutoMapper.License": "Fatal",
+        "Microsoft.AspNetCore.HttpsPolicy.HttpsRedirectionMiddleware": "Fatal",
+        "Microsoft.AspNetCore.Routing.EndpointMiddleware": "Fatal",
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "Fatal"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://localhost:9200", // Elasticsearch adresiniz
+          "indexFormat": "wallet-api",
+          "inlineFields": true,
+          "numberOfReplicas": 2,
+          "numberOfShards": 2
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "Wallet.API"
+    }
+  }
 }
