UnitOfWork behaviuor completed

--- a/Wallet.API/appsettings.json
+++ b/Wallet.API/appsettings.json
@@ -31,8 +31,8 @@
       {
         "Name": "Elasticsearch",
         "Args": {
-          "nodeUris": "http://localhost:9200", // Elasticsearch adresiniz
-          "indexFormat": "wallet-api",
+          "nodeUris": "http://localhost:9200",
+          "indexFormat": "wallet-api-{0:yyyy.MM}",
           "inlineFields": true,
           "numberOfReplicas": 2,
           "numberOfShards": 2
