--- a/Wallet.Application/Wallet.Application.csproj
+++ b/Wallet.Application/Wallet.Application.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="MassTransit" Version="8.5.2" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.2" />
     <PackageReference Include="MediatR" Version="13.0.0" />
   </ItemGroup>
 
